--- a/FaceDetection/app/build.gradle
+++ b/FaceDetection/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.seerslab.parsetuto"
-        minSdkVersion 19
+        applicationId "com.seerslab.facedetection"
+        minSdkVersion 22
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['Parse*.jar'])
-    compile 'com.parse.bolts:bolts-android:1.+'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
